# xlsx-consolidate

./: .gitignore  LICENSE  README.md  pyproject.toml  xlsx_consolidate.bat
src/xlsx_consolidate/: main.py
