[project]
name = "xlsx-consolidate"
version = "0.1.0"
description = "Consolidate just the data from the first tab of multiple Excel xlsx files into one."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.1",
    "pytz>=2025.2",
    "rich>=14.1.0",
    "xlsxwriter>=3.2.5",
]
[project.scripts]
xlsx_consolidate = "xlsx_consolidate.main:main"
